--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
     </licenses>
 
     <properties>
-        <!-- Explicitly declaring the source encoding eliminates the following 
+        <!-- Explicitly declaring the source encoding eliminates the following
             message: -->
-        <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
+        <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
             resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -46,7 +46,7 @@
 
         <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
 
-        <version.jboss.spec.javaee.6.0>3.0.2.Final-redhat-15</version.jboss.spec.javaee.6.0>
+        <version.jboss.spec.javaee.6.0>3.0.2.Final</version.jboss.spec.javaee.6.0>
 
         <!-- other plugin versions -->
         <version.war.plugin>2.1.1</version.war.plugin>
@@ -56,14 +56,51 @@
         <maven.compiler.source>1.6</maven.compiler.source>
     </properties>
 
+    <repositories>
+      <repository>
+        <releases/>
+        <snapshots>
+          <enabled>false</enabled>
+        </snapshots>
+        <id>fusesource</id>
+        <url>http://repo.fusesource.com/nexus/content/groups/public/</url>
+      </repository>
+      <repository>
+        <releases/>
+        <snapshots>
+          <enabled>false</enabled>
+        </snapshots>
+        <id>jboss-public-repository</id>
+        <url>http://repository.jboss.org/nexus/content/repositories/public/</url>
+      </repository>
+    </repositories>
+    <pluginRepositories>
+      <pluginRepository>
+        <releases/>
+        <snapshots>
+          <enabled>false</enabled>
+        </snapshots>
+        <id>fusesource-plugin-repository</id>
+        <url>http://repo.fusesource.com/nexus/content/groups/public</url>
+      </pluginRepository>
+      <pluginRepository>
+        <releases/>
+        <snapshots>
+          <enabled>false</enabled>
+        </snapshots>
+        <id>jboss-public-plugin-repository</id>
+        <url>http://repository.jboss.org/nexus/content/repositories/public/</url>
+      </pluginRepository>
+    </pluginRepositories>
+
     <dependencyManagement>
         <dependencies>
             <!-- Define the version of JBoss' Java EE 6 APIs we want to use -->
-            <!-- JBoss distributes a complete set of Java EE 6 APIs including a Bill 
-                of Materials (BOM). A BOM specifies the versions of a "stack" (or a collection) 
-                of artifacts. We use this here so that we always get the correct versions 
-                of artifacts. Here we use the jboss-javaee-6.0 stack (you can read this as 
-                the JBoss stack of the Java EE 6 APIs). You can actually use this stack with 
+            <!-- JBoss distributes a complete set of Java EE 6 APIs including a Bill
+                of Materials (BOM). A BOM specifies the versions of a "stack" (or a collection)
+                of artifacts. We use this here so that we always get the correct versions
+                of artifacts. Here we use the jboss-javaee-6.0 stack (you can read this as
+                the JBoss stack of the Java EE 6 APIs). You can actually use this stack with
                 any version of JBoss EAP that implements Java EE 6. -->
             <dependency>
                 <groupId>org.jboss.spec</groupId>
@@ -76,22 +113,25 @@
     </dependencyManagement>
 
     <dependencies>
-        <!-- Import the Servlet API, we use provided scope as the API is 
+        <!-- Import the Servlet API, we use provided scope as the API is
             included in JBoss EAP 6 -->
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
             <artifactId>jboss-servlet-api_3.0_spec</artifactId>
             <scope>provided</scope>
+            <version>1.0.2.Final</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.jms</groupId>
             <artifactId>jboss-jms-api_1.1_spec</artifactId>
             <scope>provided</scope>
+            <version>1.0.1.Final</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.ejb</groupId>
             <artifactId>jboss-ejb-api_3.1_spec</artifactId>
             <scope>provided</scope>
+            <version>1.0.2.Final</version>
         </dependency>
 	<dependency>
             <groupId>org.jboss.ejb3</groupId>
@@ -100,21 +140,23 @@
             <version>2.0.0-redhat-2</version>
             <scope>provided</scope>
         </dependency>
-        
-        
+
+
 		<!-- Import the CDI API, we use provided scope as the API is included in JBoss EAP 6 -->
         <dependency>
              <groupId>javax.enterprise</groupId>
              <artifactId>cdi-api</artifactId>
              <scope>provided</scope>
+             <version>1.2</version>
         </dependency>
 
-        <!-- Import the Common Annotations API (JSR-250), we use provided scope 
+        <!-- Import the Common Annotations API (JSR-250), we use provided scope
            as the API is included in JBoss EAP 6 -->
         <dependency>
              <groupId>org.jboss.spec.javax.annotation</groupId>
              <artifactId>jboss-annotations-api_1.1_spec</artifactId>
              <scope>provided</scope>
+             <version>1.0.1.Final</version>
         </dependency>
 
         <!-- Import the JPA API, we use provided scope as the API is included in JBoss EAP 6 -->
@@ -122,6 +164,7 @@
              <groupId>org.hibernate.javax.persistence</groupId>
              <artifactId>hibernate-jpa-2.0-api</artifactId>
              <scope>provided</scope>
+             <version>1.0.1.Final</version>
         </dependency>
 
         <!-- Import the JPA API, we use provided scope as the API is included in JBoss EAP 6 -->
@@ -129,22 +172,13 @@
              <groupId>org.jboss.spec.javax.transaction</groupId>
              <artifactId>jboss-transaction-api_1.1_spec</artifactId>
              <scope>provided</scope>
+             <version>1.0.1.Final</version>
         </dependency>
 
-        <!-- Import the EJB API, we use provided scope as the API is included in JBoss EAP 6 -->
-        <dependency>
-             <groupId>org.jboss.spec.javax.ejb</groupId>
-             <artifactId>jboss-ejb-api_3.1_spec</artifactId>
-             <scope>provided</scope>
-        </dependency>
-        
-        
-        
-        
     </dependencies>
 
     <build>
-        <!-- Set the name of the war, used as the context root when the app 
+        <!-- Set the name of the war, used as the context root when the app
             is deployed -->
         <finalName>${project.artifactId}</finalName>
         <plugins>
@@ -152,7 +186,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>${version.war.plugin}</version>
                 <configuration>
-                    <!-- Java EE 6 doesn't require web.xml, Maven needs to 
+                    <!-- Java EE 6 doesn't require web.xml, Maven needs to
                         catch up! -->
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
@@ -167,11 +201,11 @@
     </build>
     <profiles>
         <profile>
-            <!-- When built in OpenShift the 'openshift' profile will be 
+            <!-- When built in OpenShift the 'openshift' profile will be
                 used when invoking mvn. -->
-            <!-- Use this profile for any OpenShift specific customization 
+            <!-- Use this profile for any OpenShift specific customization
                 your app will need. -->
-            <!-- By default that is to put the resulting archive into the 
+            <!-- By default that is to put the resulting archive into the
                 'deployments' folder. -->
             <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
             <id>openshift</id>
@@ -183,7 +217,7 @@
                         <configuration>
                             <outputDirectory>deployments</outputDirectory>
                             <warName>ROOT</warName>
-                            <!-- Java EE 6 doesn't require web.xml, Maven 
+                            <!-- Java EE 6 doesn't require web.xml, Maven
                                 needs to catch up! -->
                             <failOnMissingWebXml>false</failOnMissingWebXml>
                         </configuration>
